--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nishaonlineshoppingjava@gmail.com
+spring.mail.password=pnwjfsqcwntdkdhp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
